enum_to_enum_derive/tests/examples/missing_from_enum_fail.stderr
error: #[from_enum(Src)] must appear at least once to specify the source enum(s)
 --> $DIR/missing_from_enum_fail.rs:9:1
  |
9 | enum SimpleDest {
  | ^^^^
